# fv-mcp-server

./: .gitignore  README.md  gemini-settings-tclsh-dev.json  gemini-settings.json  pyproject.toml
src/fv_mcp/: __init__.py  server.py  tcl_bridge.py
tcl/: bridge.tcl
tcl/procs/: 00_core.tcl  01_jg_tools.tcl  EXAMPLE_custom_proc.tcl
tests/: test_bridge_protocol.py
