[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fv-mcp-server"
version = "0.1.0"
description = "MCP server for Formal Verification tools (JasperGold / TCL) — Gemini CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
]

[project.scripts]
fv-mcp = "fv_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fv_mcp"]

[tool.hatch.build]
include = [
    "src/fv_mcp/**",
    "tcl/**",
]
